--- a/index.html
+++ b/index.html
@@ -158,14 +158,15 @@
 
       const inputs = block.querySelectorAll('input, select');
     childData.push({
-      firstName: inputs[0].value,
-      lastName: inputs[1].value,
-      dob: inputs[2].value,
-      gender: inputs[3].value,
-      team: inputs[4].value || 'N/A',
-      level: inputs[5].value,
-      waiver: inputs[6].checked
-      });
+      firstName: block.querySelector('input[placeholder="Participant First Name"]').value,
+      lastName: block.querySelector('input[placeholder="Participant Last Name"]').value,
+      dob: block.querySelector('input[placeholder="Date of Birth (MM/DD/YYYY)"]').value,
+      gender: block.querySelector('select:nth-of-type(1)').value,
+      level: block.querySelector('select:nth-of-type(2)').value,
+      team: "N/A",
+      waiver: block.querySelector('input[type="checkbox"]').checked
+    });
+
         });
 
       formData = {
