--- a/index.html
+++ b/index.html
@@ -119,35 +119,35 @@
     let children = [];
 
     function addParticipant() {
-  const childBlock = document.createElement('div');
-  childBlock.className = 'child-block';
-  childBlock.innerHTML = `
-    <input type="text" placeholder="Participant First Name" required>
-    <input type="text" placeholder="Participant Last Name" required>
-    <input type="text" placeholder="Date of Birth (MM/DD/YYYY)" required>
-    <select required>
-      <option value="">Select Gender</option>
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-    </select>
-    <select required>
-      <option value="">Select Soccer Level</option>
-      <option value="Recreational">Recreational</option>
-      <option value="Travel">Travel</option>
-    </select>
-    <div class="waiver-text">
-      I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival...
-    </div>
-    <div style="margin-top: 10px;">
-      <label style="display: flex; align-items: center; gap: 8px; font-size: 14px;">
-        <input type="checkbox" required style="width: auto; margin: 0;"> I agree to the waiver and terms.
-      </label>
-    </div>
-  `;
-  document.getElementById('children').appendChild(childBlock);
-  children.push(childBlock);
-  updateTotal();
-}
+      const childBlock = document.createElement('div');
+      childBlock.className = 'child-block';
+      childBlock.innerHTML = `
+        <input type="text" placeholder="Participant First Name" required>
+        <input type="text" placeholder="Participant Last Name" required>
+        <input type="text" placeholder="Date of Birth (MM/DD/YYYY)" required>
+        <select required>
+          <option value="">Select Gender</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+        </select>
+        <select required>
+          <option value="">Select Soccer Level</option>
+          <option value="Recreational">Recreational</option>
+          <option value="Travel">Travel</option>
+        </select>
+        <div class="waiver-text">
+          I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
+        </div>
+        <div style="margin-top: 10px;">
+  <label style="display: flex; align-items: center; gap: 8px; font-size: 14px;">
+    <input type="checkbox" required style="width: auto; margin: 0;"> I agree to the waiver and terms.
+  </label>
+</div>
+      `;
+      document.getElementById('children').appendChild(childBlock);
+      children.push(childBlock);
+      updateTotal();
+    }
 
     function updateTotal() {
       document.getElementById('totalAmount').textContent = children.length * 10;
@@ -156,20 +156,27 @@
     document.getElementById('registration-form').addEventListener('submit', function(e) {
       e.preventDefault();
 
-      const inputs = block.querySelectorAll('input, select');
-    childData.push({
-      firstName: block.querySelector('input[placeholder="Participant First Name"]').value,
-      lastName: block.querySelector('input[placeholder="Participant Last Name"]').value,
-      dob: block.querySelector('input[placeholder="Date of Birth (MM/DD/YYYY)"]').value,
-      gender: block.querySelector('select:nth-of-type(1)').value,
-      level: block.querySelector('select:nth-of-type(2)').value,
-      team: "N/A",
-      waiver: block.querySelector('input[type="checkbox"]').checked
-    });
+      
+      
+      const childData = [];
+      children.forEach(block => {
+        const inputs = block.querySelectorAll('input, select');
+        const waiverCheckbox = block.querySelector('input[type="checkbox"]');
 
+        // Skip malformed blocks
+        if (inputs.length < 6 || !waiverCheckbox) return;
+
+        childData.push({
+          firstName: inputs[0].value,
+          lastName: inputs[1].value,
+          dob: inputs[2].value,
+          gender: inputs[3].value,
+          team: inputs[4].value || 'N/A',
+          level: inputs[5].value,
+          waiver: waiverCheckbox.checked
         });
-
-      formData = {
+      });
+formData = {
         parentName: document.getElementById('parentName').value,
         parentEmail: document.getElementById('parentEmail').value,
         parentPhone: document.getElementById('parentPhone').value,
@@ -192,17 +199,8 @@
           }]
         });
       },
-      fetch("https://script.google.com/macros/s/AKfycbxwbFnfi_pZcduAxwOuYEtqiDkyIua6dViBBK6LNoem6MzzwaqWYOY_vLjWf8Eu1ICxpQ/exec", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify(formData)
-})
-.then(response => response.json())
-.then(data => console.log('Google Sheet response:', data))
-.catch(error => console.error('Error sending to Google Sheet:', error));
-
-      // onApprove: function(data, actions) {
-        // return actions.order.capture().then(function(details) {
+      onApprove: function(data, actions) {
+        return actions.order.capture().then(function(details) {
           generateQRCode();
         });
       }
