--- a/index.html
+++ b/index.html
@@ -1,256 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
-  <style>
-    :root {
-      --masar-red: #b03a2e;
-      --masar-blue: #007c91;
-      --masar-green: #007a57;
-      --masar-gold: #d89d38;
-      --light-bg: #f7f9fb;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #ffffff;
-      padding: 30px;
-      margin: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-      border-top: 5px solid var(--masar-blue);
-    }
-    h2 {
-      text-align: center;
-      color: var(--masar-blue);
-      margin-bottom: 10px;
-    }
-    input, select, button, label, textarea {
-      width: 100%;
-      margin-top: 10px;
-      padding: 12px;
-      font-size: 15px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-    button {
-      background-color: var(--masar-red);
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    button:hover {
-      background-color: #8e2e23;
-    }
-    .child-block {
-      background-color: #f3f6f8;
-      padding: 20px;
-      border: 1px solid #ccdbe2;
-      border-left: 5px solid var(--masar-green);
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-    .waiver-text {
-      font-size: 14px;
-      line-height: 1.6;
-      background: #fffaf0;
-      padding: 10px;
-      border-left: 4px solid var(--masar-gold);
-      margin-top: 10px;
-    }
-    #qr-code {
-      margin-top: 30px;
-      text-align: center;
-    }
-    .logo {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .logo img {
-      width: 160px;
-    }
-    h4 {
-      margin-top: 20px;
-      color: #333;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Registration Form</title>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">
-      <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" style="width: 180px; max-width: 100%;">
-    </div>
-    <h2>Moroccan Youth Athletic Festival - Spring 2025</h2>
-    <form id="registration-form">
-      <h3>Parent Information</h3>
-      <input type="text" id="parentName" placeholder="Parent Full Name" required>
-      <input type="email" id="parentEmail" placeholder="Parent Email Address" required>
-      <input type="text" id="parentPhone" placeholder="Phone Number" required>
+  <form id="registration-form">
+    <!-- Parent Information -->
+    <input type="text" id="parentName" placeholder="Parent Full Name" required>
+    <input type="email" id="parentEmail" placeholder="Parent Email" required>
+    <input type="text" id="parentPhone" placeholder="Parent Phone" required>
 
-      <h3>Participants</h3>
-      <div id="children"></div>
-      <button type="button" onclick="addParticipant()">+ Add Participant</button>
-
-      <h4>Total: $<span id="totalAmount">0</span></h4>
-      <button type="submit">Proceed to Payment</button>
-    </form>
-
-    <div id="paypal-button-container" style="display:none;"></div>
-    <div id="qr-code"></div>
-  </div>
-
-  <script>
-    emailjs.init("YOUR_EMAILJS_USER_ID");
-
-    let formData = {};
-    let children = [];
-
-    function addParticipant() {
-      const childBlock = document.createElement('div');
-      childBlock.className = 'child-block';
-      childBlock.innerHTML = `
-        <input type="text" placeholder="Participant First Name" required>
-        <input type="text" placeholder="Participant Last Name" required>
-        <input type="text" placeholder="Date of Birth (MM/DD/YYYY)" required>
-        <select required>
+    <!-- Participant Information -->
+    <div id="participants">
+      <div class="participant">
+        <input type="text" class="firstName" placeholder="First Name" required>
+        <input type="text" class="lastName" placeholder="Last Name" required>
+        <input type="text" class="dob" placeholder="DOB (MM/DD/YYYY)" required>
+        <select class="gender" required>
           <option value="">Select Gender</option>
           <option value="Male">Male</option>
           <option value="Female">Female</option>
         </select>
-        <select required>
+        <select class="level" required>
           <option value="">Select Soccer Level</option>
           <option value="Recreational">Recreational</option>
           <option value="Travel">Travel</option>
         </select>
-        <div class="waiver-text">
-          I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
+      </div>
+    </div>
+
+    <button type="button" onclick="addParticipant()">Add Another Participant</button>
+    <button type="submit">Submit</button>
+  </form>
+
+  <script>
+    const form = document.getElementById('registration-form');
+    const participantsDiv = document.getElementById('participants');
+
+    function addParticipant() {
+      const participantHTML = `
+        <div class="participant">
+          <input type="text" class="firstName" placeholder="First Name" required>
+          <input type="text" class="lastName" placeholder="Last Name" required>
+          <input type="text" class="dob" placeholder="DOB (MM/DD/YYYY)" required>
+          <select class="gender" required>
+            <option value="">Select Gender</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+          </select>
+          <select class="level" required>
+            <option value="">Select Soccer Level</option>
+            <option value="Recreational">Recreational</option>
+            <option value="Travel">Travel</option>
+          </select>
         </div>
-        <div style="margin-top: 10px;">
-  <label style="display: flex; align-items: center; gap: 8px; font-size: 14px;">
-    <input type="checkbox" required style="width: auto; margin: 0;"> I agree to the waiver and terms.
-  </label>
-</div>
       `;
-      document.getElementById('children').appendChild(childBlock);
-      children.push(childBlock);
-      updateTotal();
+      participantsDiv.insertAdjacentHTML('beforeend', participantHTML);
     }
 
-    function updateTotal() {
-      document.getElementById('totalAmount').textContent = children.length * 10;
-    }
-
-    document.getElementById('registration-form').addEventListener('submit', function(e) {
+    form.addEventListener('submit', function(e) {
       e.preventDefault();
 
-      
-      
-      const childData = [];
-      children.forEach(block => {
-        const inputs = block.querySelectorAll('input, select');
-        const waiverCheckbox = block.querySelector('input[type="checkbox"]');
+      const parentName = document.getElementById('parentName').value;
+      const parentEmail = document.getElementById('parentEmail').value;
+      const parentPhone = document.getElementById('parentPhone').value;
 
-        // Skip malformed blocks
-        if (inputs.length < 6 || !waiverCheckbox) return;
+      const participantElements = document.querySelectorAll('.participant');
+      const children = [];
 
-        childData.push({
-          firstName: inputs[0].value,
-          lastName: inputs[1].value,
-          dob: inputs[2].value,
-          gender: inputs[3].value,
-          team: inputs[4].value || 'N/A',
-          level: inputs[5].value,
-          waiver: waiverCheckbox.checked
-        });
+      participantElements.forEach(participant => {
+        const firstName = participant.querySelector('.firstName').value;
+        const lastName = participant.querySelector('.lastName').value;
+        const dob = participant.querySelector('.dob').value;
+        const gender = participant.querySelector('.gender').value;
+        const level = participant.querySelector('.level').value;
+
+        children.push({ firstName, lastName, dob, gender, level });
       });
-formData = {
-        parentName: document.getElementById('parentName').value,
-        parentEmail: document.getElementById('parentEmail').value,
-        parentPhone: document.getElementById('parentPhone').value,
-        children: childData,
-        ticketId: 'TICKET-' + Date.now(),
-        total: children.length * 10
+
+      const formData = {
+        parentName,
+        parentEmail,
+        parentPhone,
+        children
       };
 
-      document.getElementById('registration-form').style.display = 'none';
-      document.getElementById('paypal-button-container').style.display = 'block';
+      fetch('https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(formData)
+      })
+      .then(response => response.json())
+      .then(data => {
+        alert('Registration successful!');
+        form.reset();
+      })
+      .catch(error => {
+        console.error('Error:', error);
+        alert('There was an error submitting the form.');
+      });
     });
-
-    /* paypal.Buttons({
-      createOrder: function(data, actions) {
-        return actions.order.create({
-          purchase_units: [{
-            amount: { value: formData.total.toFixed(2) },
-            payee: { email_address: 'ourmasar@gmail.com' },
-            description: 'Moroccan Youth Athletic Festival - Spring 2025 Registration'
-          }]
-        });
-      },
-      onApprove: function(data, actions) {
-        return actions.order.capture().then(function(details) {
-          generateQRCode();
-
-          // Send data to Google Sheet
-          fetch("https://script.google.com/macros/s/AKfycbxwbFnfi_pZcduAxwOuYEtqiDkyIua6dViBBK6LNoem6MzzwaqWYOY_vLjWf8Eu1ICxpQ/exec", {
-            method: "POST",
-            mode: "no-cors",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(formData)
-          });
-
-        });
-      }
-    }).render('#paypal-button-container'); */
-
-    function generateQRCode() {
-      const childInfo = formData.children
-        .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}, Level: ${c.level}`)
-        .join(' | ');
-
-      const qrData = `Parent: ${formData.parentName} | Email: ${formData.parentEmail} | Phone: ${formData.parentPhone} | ${childInfo} | Ticket ID: ${formData.ticketId}`;
-
-      QRCode.toDataURL(qrData, { width: 200 }, function (error, url) {
-        if (error) return console.error(error);
-        document.getElementById('qr-code').innerHTML = `<img src="${url}" alt="QR Code Ticket">`;
-        formData.qrImage = url;
-        sendTicketByEmail();
-      });
-    }
-
-    function sendTicketByEmail() {
-      const childSummary = formData.children
-        .map((c, i) => `Child ${i + 1}: ${c.firstName} ${c.lastName}, DOB: ${c.dob}, Gender: ${c.gender}, Team: ${c.team}, Level: ${c.level}`)
-        .join('\n');
-
-      emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", {
-        name: formData.parentName,
-        email: formData.parentEmail,
-        phone: formData.parentPhone,
-        ticket_id: formData.ticketId,
-        children: childSummary,
-        qr_image: formData.qrImage
-      }).then(function(response) {
-        alert('Registration complete! Check your email for your QR code ticket.');
-      }, function(error) {
-        console.error('FAILED...', error);
-        alert('Registration complete, but failed to send email.');
-      });
-    }
-
-    addParticipant();
   </script>
 </body>
 </html>
