--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <script src="https://www.paypal.com/sdk/js?client-id=AcD6KdrXGigfbBBDGPtlhLaKLp6S2ea7mR0kRuMYLp3_t7NFpiBMZPT4pGSzCtkgQRMvx2PsqF_ilvv6&currency=USD"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=ASNXc-c_Ozu9IRC4ILp5oC6VOLz18amVlbYfVnKYA2kvJIBlQnoLUPP-Rdz4J_vyMD5toHUwg-OQH-OX&currency=USD"></script>
   <style>
     .masar-logo {
       max-height: 120px;
@@ -17,204 +17,229 @@
 </head>
 
 <body>
-  <section class="hero is-primary is-bold">
-    <div class="hero-body">
-      <div class="container">
-        <div class="columns is-vcentered">
-          <div class="column has-text-centered">
-            <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025</h1>
-            <h2 class="subtitle is-4">Registration Form</h2>
-          </div>
-          <div class="column is-narrow">
-            <figure class="image is-128x128">
-              <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
-            </figure>
+<section class="hero is-primary is-bold">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-vcentered">
+        <div class="column has-text-centered">
+          <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025</h1>
+          <h2 class="subtitle is-4">Registration Form</h2>
+        </div>
+        <div class="column is-narrow">
+          <figure class="image is-128x128">
+            <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<form id="form" class="container m-4 pl-4" method="POST">
+  <h2 class="title is-4 mt-5">Parent Information</h2>
+  <div class="field">
+    <label class="label">Full Name</label>
+    <div class="control">
+      <input class="input" type="text" name="Parent Full Name" required>
+    </div>
+  </div>
+  <div class="field">
+    <label class="label">Email</label>
+    <div class="control">
+      <input class="input" type="email" name="Parent Email" required>
+    </div>
+  </div>
+  <div class="field">
+    <label class="label">Phone Number</label>
+    <div class="control">
+      <input class="input" type="tel" name="Parent Phone" required>
+    </div>
+  </div>
+
+  <h2 class="title is-4 mt-5">Participant Information</h2>
+  <div id="participants-container"></div>
+  <div class="field">
+    <div class="control">
+      <button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button>
+    </div>
+  </div>
+
+  <h2 class="title is-4 mt-5">Waiver & Consent</h2>
+  <div class="field">
+    <div class="control">
+      <textarea class="textarea" readonly>
+I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
+      </textarea>
+    </div>
+  </div>
+  <div class="field">
+    <div class="control">
+      <label class="checkbox">
+        <input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.
+      </label>
+    </div>
+  </div>
+
+  <div id="total-due" class="notification is-info" style="display:none; font-weight:bold; margin-top:20px;">
+    Total Due: $0
+  </div>
+
+  <div id="proceed-container" class="field mt-5">
+    <div class="control">
+      <button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button>
+    </div>
+  </div>
+
+  <div id="paypal-button-container" style="display:none;" class="mt-4"></div>
+
+  <div class="field is-grouped mt-4">
+    <div class="control">
+      <button class="button is-primary" type="submit" id="submit-button" disabled>Submit</button>
+    </div>
+    <div class="control">
+      <button class="button is-danger" type="reset">Cancel</button>
+    </div>
+  </div>
+</form>
+
+<script>
+function updateTotalAmount() {
+  const participantCount = document.querySelectorAll('#participants-container .box').length;
+  const totalDueDiv = document.getElementById('total-due');
+  if (participantCount > 0) {
+    totalDueDiv.style.display = 'block';
+    totalDueDiv.textContent = `Total Due: $${participantCount * 10}`;
+  } else {
+    totalDueDiv.style.display = 'none';
+  }
+}
+
+function addParticipant() {
+  const container = document.getElementById('participants-container');
+  const id = `participant-${Date.now()}`;
+  const index = container.children.length;
+  container.insertAdjacentHTML('beforeend', `
+    <div class="box mt-4" id="${id}">
+      <div class="field">
+        <label class="label">First Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Participant First Name[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Last Name</label>
+        <div class="control">
+          <input class="input" type="text" name="Participant Last Name[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Date of Birth</label>
+        <div class="control">
+          <input class="input" type="date" name="Participant DOB[]" required>
+        </div>
+      </div>
+      <div class="field">
+        <label class="label">Gender</label>
+        <div class="control">
+          <label class="radio">
+            <input type="radio" name="Gender[${index}]" value="male" required onchange="toggleSoccerLevel('${id}', true)"> Male
+          </label>
+          <label class="radio">
+            <input type="radio" name="Gender[${index}]" value="female" onchange="toggleSoccerLevel('${id}', false)"> Female
+          </label>
+        </div>
+      </div>
+      <div class="field soccer-level" id="soccer-${id}">
+        <label class="label">Soccer Level</label>
+        <div class="control">
+          <div class="select">
+            <select name="Soccer Level[]">
+              <option value="recreational">Recreational</option>
+              <option value="travel">Travel</option>
+            </select>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  `);
+  updateTotalAmount();
+}
 
-  <form id="form" class="container m-4 pl-4" method="POST">
-    <h2 class="title is-4 mt-5">Parent Information</h2>
-    <div class="field">
-      <label class="label">Full Name</label>
-      <div class="control">
-        <input class="input" type="text" name="Parent Full Name" required>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Email</label>
-      <div class="control">
-        <input class="input" type="email" name="Parent Email" required>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Phone Number</label>
-      <div class="control">
-        <input class="input" type="tel" name="Parent Phone" required>
-      </div>
-    </div>
+function removeParticipant(id) {
+  const element = document.getElementById(id);
+  if (element) {
+    element.remove();
+  }
+  updateTotalAmount();
+}
 
-    <h2 class="title is-4 mt-5">Participant Information</h2>
-    <div id="participants-container"></div>
-    <div class="field">
-      <div class="control">
-        <button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button>
-      </div>
-    </div>
+function toggleSoccerLevel(participantId, show) {
+  const el = document.getElementById(`soccer-${participantId}`);
+  if (el) {
+    el.style.display = show ? 'block' : 'none';
+  }
+}
 
-    <h2 class="title is-4 mt-5">Waiver & Consent</h2>
-    <div class="field">
-      <div class="control">
-        <textarea class="textarea" readonly>
-I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival...
-        </textarea>
-      </div>
-    </div>
-    <div class="field">
-      <div class="control">
-        <label class="checkbox">
-          <input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.
-        </label>
-      </div>
-    </div>
+function startPayPal() {
+  const parentName = document.querySelector('input[name="Parent Full Name"]').value.trim();
+  const parentEmail = document.querySelector('input[name="Parent Email"]').value.trim();
+  const parentPhone = document.querySelector('input[name="Parent Phone"]').value.trim();
+  const waiverConsent = document.querySelector('input[name="Waiver Consent"]:checked');
 
-    <div id="total-due" class="notification is-info" style="display:none; font-weight:bold; margin-top:20px;">
-      Total Due: $0
-    </div>
+  if (!parentName || !parentEmail || !parentPhone) {
+    alert("Please complete all Parent Information fields before proceeding to payment.");
+    return;
+  }
 
-    <div id="proceed-container" class="field mt-5">
-      <div class="control">
-        <button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button>
-      </div>
-    </div>
+  const participantBoxes = document.querySelectorAll('#participants-container .box');
+  if (participantBoxes.length === 0) {
+    alert("Please add at least one participant before proceeding to payment.");
+    return;
+  }
 
-    <div id="paypal-button-container" style="display:none;" class="mt-4"></div>
+  for (let box of participantBoxes) {
+    const firstName = box.querySelector('input[name="Participant First Name[]"]').value.trim();
+    const lastName = box.querySelector('input[name="Participant Last Name[]"]').value.trim();
+    const dob = box.querySelector('input[name="Participant DOB[]"]').value.trim();
+    const genderSelected = box.querySelector('input[name^="Gender"]:checked');
 
-    <div class="field is-grouped mt-4">
-      <div class="control">
-        <button class="button is-primary" type="submit" id="submit-button" disabled>Submit</button>
-      </div>
-      <div class="control">
-        <button class="button is-danger" type="reset">Cancel</button>
-      </div>
-    </div>
-  </form>
-
-  <script>
-    function updateTotalAmount() {
-      const participantCount = document.querySelectorAll('#participants-container .box').length;
-      const totalDueDiv = document.getElementById('total-due');
-      if (participantCount > 0) {
-        totalDueDiv.style.display = 'block';
-        totalDueDiv.textContent = `Total Due: $${participantCount * 10}`;
-      } else {
-        totalDueDiv.style.display = 'none';
-      }
+    if (!firstName || !lastName || !dob || !genderSelected) {
+      alert("Please fill out all fields for every participant before proceeding to payment.");
+      return;
     }
+  }
 
-    function addParticipant() {
-      const container = document.getElementById('participants-container');
-      const index = container.children.length + 1;
-      const id = `participant-${Date.now()}`;
-      container.insertAdjacentHTML('beforeend', `
-        <div class="box mt-4" id="${id}">
-          <div class="field">
-            <label class="label">First Name</label>
-            <div class="control">
-              <input class="input" type="text" name="Participant First Name[]" required>
-            </div>
-          </div>
-          <div class="field">
-            <label class="label">Last Name</label>
-            <div class="control">
-              <input class="input" type="text" name="Participant Last Name[]" required>
-            </div>
-          </div>
-          <div class="field">
-            <label class="label">Date of Birth</label>
-            <div class="control">
-              <input class="input" type="date" name="Participant DOB[]" required>
-            </div>
-          </div>
-          <div class="field">
-            <label class="label">Gender</label>
-            <div class="control">
-              <label class="radio">
-                <input type="radio" name="Gender[${index-1}]" value="male" required> Male
-              </label>
-              <label class="radio">
-                <input type="radio" name="Gender[${index-1}]" value="female"> Female
-              </label>
-            </div>
-          </div>
-        </div>`);
-      updateTotalAmount();
+  if (!waiverConsent) {
+    alert("You must agree to the Waiver & Consent before proceeding to payment.");
+    return;
+  }
+
+  document.getElementById('proceed-container').style.display = 'none';
+  document.getElementById('paypal-button-container').style.display = 'block';
+
+  paypal.Buttons({
+    createOrder: function(data, actions) {
+      const participantCount = participantBoxes.length;
+      const totalAmount = participantCount * 10 || 10;
+      return actions.order.create({
+        purchase_units: [{
+          amount: { value: totalAmount.toFixed(2) }
+        }]
+      });
+    },
+    onApprove: function(data, actions) {
+      return actions.order.capture().then(function(details) {
+        document.getElementById('form').submit();
+      });
     }
+  }).render('#paypal-button-container');
+}
 
-    function startPayPal() {
-      const parentName = document.querySelector('input[name="Parent Full Name"]').value.trim();
-      const parentEmail = document.querySelector('input[name="Parent Email"]').value.trim();
-      const parentPhone = document.querySelector('input[name="Parent Phone"]').value.trim();
-      const waiverConsent = document.querySelector('input[name="Waiver Consent"]:checked');
-
-      if (!parentName || !parentEmail || !parentPhone) {
-        alert("Please complete all Parent Information fields before proceeding to payment.");
-        return;
-      }
-
-      const participantBoxes = document.querySelectorAll('#participants-container .box');
-      if (participantBoxes.length === 0) {
-        alert("Please add at least one participant before proceeding to payment.");
-        return;
-      }
-
-      for (let box of participantBoxes) {
-        const firstName = box.querySelector('input[name="Participant First Name[]"]').value.trim();
-        const lastName = box.querySelector('input[name="Participant Last Name[]"]').value.trim();
-        const dob = box.querySelector('input[name="Participant DOB[]"]').value.trim();
-        const genderSelected = box.querySelector('input[name^="Gender"]:checked');
-
-        if (!firstName || !lastName || !dob || !genderSelected) {
-          alert("Please fill out all fields for every participant before proceeding to payment.");
-          return;
-        }
-      }
-
-      if (!waiverConsent) {
-        alert("You must agree to the Waiver & Consent before proceeding to payment.");
-        return;
-      }
-
-      document.getElementById('proceed-container').style.display = 'none';
-      document.getElementById('paypal-button-container').style.display = 'block';
-
-      paypal.Buttons({
-        createOrder: function(data, actions) {
-          const participantCount = participantBoxes.length;
-          const totalAmount = participantCount * 10 || 10;
-          return actions.order.create({
-            purchase_units: [{
-              amount: {
-                value: totalAmount.toFixed(2)
-              }
-            }]
-          });
-        },
-        onApprove: function(data, actions) {
-          return actions.order.capture().then(function(details) {
-            document.getElementById('form').submit();
-          });
-        }
-      }).render('#paypal-button-container');
-    }
-
-    document.getElementById('form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      window.location.href = "thank-you.html";
-    });
-  </script>
+document.getElementById('form').addEventListener('submit', function(e) {
+  e.preventDefault();
+  window.location.href = "thank-you.html";
+});
+</script>
 
 </body>
 </html>
